schronisko do sprawdzenia

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Schronisko Tymeleafe</title>
-</head>
-<body>
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8"/>-->
+    <!--<title>Schronisko Tymeleafe</title>-->
+<!--</head>-->
+<!--<body>-->
 
-<h1>Pieski szukające domu</h1>
+<!--<h1>Pieski szukające domu dziś</h1>-->
 
-<ul>
-    <li th:each="dog: ${dogs}">
-        <a th:href="${dog.name}" th:text="${dog.name}"></a>
-    </li>
-</ul>
+<!--<ul>-->
+    <!--<li th:each="animal: ${animal}">-->
+        <!--<a th:href="${animal.id}" th:text="${animal.name}"></a>-->
+    <!--</li>-->
+<!--</ul>-->
 
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
